--- a/data/config.json
+++ b/data/config.json
@@ -5,5 +5,6 @@
   "transcriptionTypes": {
     "transcription": "Transcription"
   },
-  "viewerUrl": "/OrteliTest2"
+  "viewerUrl": "/OrteliTest2",
+  "customCss": "custom.css"
 }
