--- a/data/config.json
+++ b/data/config.json
@@ -5,6 +5,5 @@
   "transcriptionTypes": {
     "transcription": "Transcription"
   },
-  "viewerUrl": "/OrteliTest2",
-  "customCss": "custom.css"
+  "viewerUrl": "/OrteliTest2"
 }
